--- a/01.html/apply/coffeeIndex.html
+++ b/01.html/apply/coffeeIndex.html
@@ -13,5 +13,6 @@
         최고급 원두만을 집접 엄선하여 사용합니다. </p>
     <h2>메뉴 보기</h2>
     <p>메뉴에 대하여 자세히 알고 싶다면 <a href=menu.html>여기</a>를 클릭하세요</p>
+    test
 </body>
 </html>
