--- a/02.css/02/apply02_CSS_Q.html
+++ b/02.css/02/apply02_CSS_Q.html
@@ -30,6 +30,10 @@
             display: inline-block;
         }
 
+        .inner-menu-item {
+            display: none;
+        }
+
         h3 {
             margin-bottom: 0;
             margin-top: 25px;
