--- a/02.CSS/04/FirstProject.html
+++ b/02.CSS/04/FirstProject.html
@@ -8,6 +8,9 @@
     body {
     font-family: "Lato", sans-serif;
     /* transition: background-color .5s; // 화면 변화후 오른쪽 비활성화 쪽 변화속도*/
+
+    background-color: darkslategrey;
+    color: rgb(196, 169, 51);
     }
 
     .sidenav {
@@ -24,9 +27,9 @@
     }
 
     .sidenav a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 8px 35px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 23px;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -39,7 +42,7 @@
     .sidenav .closebtn {
     position: absolute;
     top: 0;
-    right: 25px;
+    right: 125px;
     font-size: 36px;
     margin-left: 50px;
     }
@@ -47,6 +50,7 @@
     #main {
     transition: margin-left .5s;
     padding: 16px;
+    /* margin-bottom: 80px; */
     }
 
     @media screen and (max-height: 450px) {
@@ -54,12 +58,12 @@
     .sidenav a {font-size: 18px;}
     }
     .trend {
-    font-size: 45px;
-    margin-bottom: 150px;
-    padding: 15px;
-    padding-left: 50px;
+    margin-left: 20px;
+    font-size: 75px;
+    font-style: bold;
+    padding-top: 15px;
+    padding-bottom: 20px;
     padding-right: 50px;
-    display: inline;
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     }
@@ -67,10 +71,12 @@
         list-style: none;
     }
     li {
-        font-size: 30px;
-        text-align: center;
-        margin-bottom: 15px;
-        
+        font-size: 40px;
+        margin-top: 35px;
+        margin-left: 420px;
+    }
+    h5{
+        margin-left: 800px;
     }
     </style>
 </head>
@@ -90,17 +96,18 @@
 </div>
 
 <div id="main">
-  <h1>Co.core Platinum Data</h1>
-  <p class = "trend">2019년 주목해야 할 트렌드 키워드 5
+  <h3>Co.core Platinum Data</h3>
+  <h1 class = "trend">2019년 주목해야 할 트렌드 키워드 5</h1>
       <ul>
-          <li>필환경</li>
-          <li>밀레니얼 가족 시대</li>
-          <li>유튜브</li>
-          <li>카멜레존</li>
-          <li>젠더 뉴트럴 전성시대</li>
+          <li>친환경 넘어 필(必)환경</li>
+          <li>1인·밀레니얼 가족 시대</li>
+          <li>디지털 세상의 중심은 유튜브</li>
+          <li>라이프스타일 입는 오프라인</li>
+          <li>다양성 존중과 젠더 허물기</br></li>
       </ul>
-  </p>
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; &nbsp; 기획의도</span>
+    <h5>출처 : The PR(http://www.the-pr.co.kr)</h5>
+  <!-- </p> -->
+  <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; &nbsp; 기획의도</span>
 </div>
 
 <script>
