--- a/02.CSS/04/FirstProject.html
+++ b/02.CSS/04/FirstProject.html
@@ -74,6 +74,7 @@
         font-size: 40px;
         margin-top: 35px;
         margin-left: 420px;
+		text-decoration:none;
     }
     h5{
         margin-left: 800px;
@@ -98,13 +99,13 @@
 <div id="main">
   <h3>Co.core Platinum Data</h3>
   <h1 class = "trend">2019년 주목해야 할 트렌드 키워드 5</h1>
-      <ul>
+      <ol>
           <li>친환경 넘어 필(必)환경</li>
-          <li>1인·밀레니얼 가족 시대</li>
+          <li><a href  = "https://ko.wikipedia.org/wiki/%EB%B0%80%EB%A0%88%EB%8B%88%EC%96%BC_%EC%84%B8%EB%8C%80"target="_blank" title="밀레니엄">1인·밀레니얼 가족 시대</a></li>
           <li>디지털 세상의 중심은 유튜브</li>
           <li>라이프스타일 입는 오프라인</li>
           <li>다양성 존중과 젠더 허물기</br></li>
-      </ul>
+      </ol>
     <h5>출처 : The PR(http://www.the-pr.co.kr)</h5>
   <!-- </p> -->
   <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; &nbsp; 기획의도</span>
