--- a/02.CSS/04/FirstProject.html
+++ b/02.CSS/04/FirstProject.html
@@ -7,7 +7,7 @@
     <style>
     body {
     font-family: "Lato", sans-serif;
-    /* transition: background-color .5s; // 화면 변화후 오른쪽 비활성화 쪽 변화속도*/
+    /* transition: background-color .5s;    화면 변화후 오른쪽 비활성화 쪽 변화속도 */
 
     background-color: darkslategrey;
     color: rgb(196, 169, 51);
